# zagan

./: .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix
.github/workflows/: test.yml
flake/: default.nix  packages.nix  shell.nix
tests/: CMakeLists.txt  image2d.cpp
tests/colors/: CMakeLists.txt  rgb.cpp
tests/core/: CMakeLists.txt  box2d.cpp  box3d.cpp  image2d.cpp  image3d.cpp  interpolation.cpp  point2d.cpp  point3d.cpp  vec.cpp  vec3.cpp  volume.cpp
tests/cpr/: CMakeLists.txt  centerline.cpp  frame.cpp  straightened.cpp
tests/io/: CMakeLists.txt  nifti_reader.cpp  stb_io.cpp
tests/io/fixtures/: tiny.nii
zagan/: CMakeLists.txt
zagan/include/zagan/colors/: rgb.hpp
zagan/include/zagan/core/: vec.hpp
zagan/include/zagan/core/concepts/: image_traits.hpp
zagan/include/zagan/core/domains/: box2d.hpp  box3d.hpp  ndbox.hpp
zagan/include/zagan/core/image/: image2d.hpp  image3d.hpp
zagan/include/zagan/core/interpolation/: bounds.hpp  linear.hpp  nearest.hpp
zagan/include/zagan/core/points/: ndpoint.hpp  point2d.hpp  point3d.hpp  vec3.hpp
zagan/include/zagan/core/volume/: volume.hpp
zagan/include/zagan/cpr/: centerline.hpp  frame.hpp  straightened.hpp
zagan/include/zagan/io/: imread.hpp  imsave.hpp  nifti_reader.hpp
zagan/include/zagan/labeling/: slic.hpp
zagan/src/io/: imread.cpp  imsave.cpp
